--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -18,7 +18,7 @@
       p 現在のログインユーザー
       = link_to user_page_path(current_user.id) do
         .user-image
-          = image_tag @user.profile.image_file, size: '50x50', class: "image-item"
+          = image_tag current_user.profile.image_file, size: '50x50', class: "image-item"
         .user-name
           .user-short-name
             = current_user.user_name
