--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -16,7 +16,7 @@
             = f.submit "投稿する", class: "submit"
     .user-container
       p 現在のログインユーザー
-      = link_to user_page_path(current_user.id) do
+      = link_to user_path(current_user.user_name) do
         .user-image
           = image_tag current_user.profile.image_file, size: '50x50', class: "image-item"
         .user-name
@@ -30,7 +30,7 @@
       - post.images.each do |image|
         .post-container
           .post-user-name
-            = link_to user_page_path(user.id)
+            = link_to user_path(user.user_name)
               = user.user_name
           .post-image
             = image_tag image.image_file , size: '550x550'
