[add] scope追加、テスト追加、不要な部分削除

--- a/app/views/settings/profiles/edit.html.slim
+++ b/app/views/settings/profiles/edit.html.slim
@@ -1,15 +1,15 @@
 .edit-container
-  = render 'edit_menu'
+  = render 'settings/shared/side_menu'
   .edit-contents
-    - @user.errors.full_messages.each do |message|
+    - current_user.errors.full_messages.each do |message|
       .form-error
         = message
     .edit-form-container
       .edit-profile-label
         .edit-image-container
 
-          - if @user.profile.image_file
-            = image_tag @user.profile.image_file, size: '50x50', class: "image-item"
+          - if current_user.profile.image_file
+            = image_tag current_user.profile.image_file, size: '50x50', class: "image-item"
         p フルネーム
         p ユーザーネーム
         p.label-email メールアドレス
@@ -17,10 +17,10 @@
         p.label-gender 性別
 
       .edit-profile-form
-        = form_for(@user, url: profile_path, html: {method: "patch"}) do |i|
+        = form_for(current_user, url: profile_path, html: {method: "patch"}) do |i|
           = i.fields_for :profile do |prf|
             = prf.label :image_file, "プロフィール画像の変更", class: "image_form_label"
-            = prf.file_field :image_file, class: "image_form"
+            = prf.file_field :image_file, accept: 'image/jpg,image/jpeg,image/png,image/gif', class: "image_form"
           = i.text_field :full_name
           = i.text_field :user_name
           p 非公開情報
