--- a/app/views/settings/passwords/edit.html.slim
+++ b/app/views/settings/passwords/edit.html.slim
@@ -1,7 +1,7 @@
 .edit-container
-  = render 'profiles/edit_menu'
+  = render 'settings/shared/side_menu'
   .edit-contents
-    - @user.errors.full_messages.each do |message|
+    - current_user.errors.full_messages.each do |message|
       .form-error
         = message
 
@@ -12,7 +12,7 @@
         p パスワード再入力
 
       .edit-password-form
-        = form_for(@user, url: password_path, html: {method: "patch"}) do |i|
+        = form_for(current_user, url: password_path, html: {method: "patch"}) do |i|
           = i.password_field :current_password
           = i.password_field :password
           = i.password_field :password_confirmation
