--- a/app/views/settings/passwords/edit.html.slim
+++ b/app/views/settings/passwords/edit.html.slim
@@ -1,7 +1,6 @@
 .edit-container
   = render 'settings/shared/side_menu'
   .edit-contents
-
     .edit-form-container
       .edit-password-label
         p 現在のパスワード
@@ -11,7 +10,7 @@
       .edit-password-form
         = form_for(current_user, url: password_path, html: {method: "patch"}) do |i|
           = i.password_field :current_password
-          = i.password_field :password
-          = i.password_field :password_confirmation
+          = i.password_field :new_password
+          = i.password_field :new_password_confirmation
           .submit-form
-            = i.submit "送信する", class: "button"
+            = i.submit "更新する", class: "button"
