--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -36,5 +36,5 @@
             = image_tag image.image_file , size: '550x550'
           .post-message
             - if logged_in?
-              = render partial: 'posts/posts',locals: {post: post}
+              = render partial: 'likes/like',locals: {post: post}
             = post.message
