--- a/app/views/likes/like.js.erb
+++ b/app/views/likes/like.js.erb
@@ -1,1 +1,1 @@
-$("<%= @id_name %>").html('<%= escape_javascript(render("likes/like", post: @post  )) %>');
+$("<%= @id %>").html('<%= escape_javascript(render("likes/like", post: @post  )) %>');
