[add] 画像のプレビュー機能途中まで

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -108,6 +108,11 @@ header {
         display: none;
       }
 
+      .preview,.image-preview{
+        margin-left: 120px;
+        margin-bottom: 20px;
+      }
+
       .input-btn {
         background: dodgerblue;
         color: #fff;
