--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -10,8 +10,16 @@
                 li = e
         = form_for(@post, url: posts_path(current_user.user_name)) do |f|
           = f.fields_for :images,@post.images.build do |a|
-            = a.label :image_file, "画像をアップロード", class: "input-btn"
-            = a.file_field :image_file, accept: 'image/jpg,image/jpeg,image/png,image/gif', class: "image-form"
+            .input-image onclick="$('#file').click()"
+              = a.label :image_file, "画像をアップロード", class: "input-btn"
+            #img_field
+              - if @post.images.present?
+                - @post.images.each do |image|
+                  = image_tag image.image_file, size: '140x140', class: "image-preview", id: :img_prev
+            #delete
+              .remove-image onclick="$('#delete').click()"
+                = a.label "削除", class: "input-btn"
+            = a.file_field :image_file, accept: 'image/jpg,image/jpeg,image/png,image/gif', class: "image-form", id: :file
             = f.text_area :message, class: "textarea", placeholder: "メッセージ"
             = f.submit "投稿する", class: "submit"
     .user-container
@@ -36,5 +44,5 @@
             = image_tag image.image_file , size: '550x550'
           .post-message
             - if logged_in?
-              = render partial: 'likes/like',locals: {post: post}
+              = render partial: 'likes/like', locals: {post: post}
             = post.message
