--- a/app/views/likes/unlike.js.erb
+++ b/app/views/likes/unlike.js.erb
@@ -1,1 +1,1 @@
-$("<%= @id %>").html('<%= escape_javascript(render("likes/like", post: @post  )) %>');
+$("#like-link-<%= @post.id %>").html('<%= escape_javascript(render("likes/like", post: @post  )) %>');
