--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -125,6 +125,18 @@ header {
         display: block;
         text-align: center;
       }
+      .delete-btn {
+        background: grey;
+        color: #fff;
+        cursor: pointer;
+        padding: 2px 10px;
+        width: 50%;
+        height: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        text-align: center;
+      }
 
       .submit {
         width: 50%;
