--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -13,12 +13,9 @@
             .input-image onclick="$('#file').click()"
               = a.label :image_file, "画像をアップロード", class: "input-btn"
             #img_field
-              - if @post.images.present?
-                - @post.images.each do |image|
-                  = image_tag image.image_file, size: '140x140', class: "image-preview", id: :img_prev
             #delete
               .remove-image onclick="$('#delete').click()"
-                = a.label "削除", class: "input-btn"
+                = a.label "画像の削除", class: "delete-btn"
             = a.file_field :image_file, accept: 'image/jpg,image/jpeg,image/png,image/gif', class: "image-form", id: :file
             = f.text_area :message, class: "textarea", placeholder: "メッセージ"
             = f.submit "投稿する", class: "submit"
