--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -86,12 +86,23 @@
         vertical-align: top;
 
         .image_form_label {
+          width: 180px;
           margin-top: 18px;
+          margin-bottom: 25px;
+          text-align: center;
+          background: dodgerblue;
+          color: #fff;
+          cursor: pointer;
+          padding: 2px 10px;
+          border-radius: 5px;
+        }
+
+        .title {
+          margin-bottom: 2px;
         }
 
         .image_form {
-          margin-top: 10px;
-          margin-bottom: 30px;
+          display: none;
         }
 
         input {
@@ -112,7 +123,7 @@
           width: 300px;
         }
 
-        button, .button {
+        .button {
           height: 30px;
           margin-top: 10px;
           border-radius: 5px;
