[add] フォローボタンデザイン修正、フォロワーや投稿件数を表示できるように

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -201,6 +201,10 @@
           padding: 2px 15px;
           border-radius: 5px;
         }
+        .follow-button{
+          background-color: dodgerblue;
+          color: white;
+        }
       }
 
       .user-detail {
