--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -15,11 +15,11 @@
           = render partial: 'relationships/follow', locals: {user: @user}
       .user-detail
         .user-detail-left
-          span 投稿  1000件
+          span 投稿#{@user.posts.size}件
         .user-detail-center
-          span フォロワー　100人
+          span フォロワー#{@user.passive_relationships.size}人
         .user-detail-right
-          span 10人をフォロー中
+          span #{@user.active_relationships.size}人をフォロー中
       .user-introduction
         = @user.profile.introduction
   .user-image-container
