[fix] jsファイルの記述の修正、アイコンからプロフィールページに飛べるように

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,6 +1,6 @@
 .home
   - if logged_in?
-    .new-post-form
+    #top_page.new-post-form
       .form-body
         p 新規投稿
         - if flash[:posting_errors].present?
@@ -10,13 +10,10 @@
                 li = e
         = form_for(@post, url: posts_path(current_user.user_name)) do |f|
           = f.fields_for :images,@post.images.build do |i|
-            .input-image onclick="$('#file').click()"
-              = i.label :image_file, "画像をアップロード", class: "input-btn"
-            #img_field
-            #delete
-              .remove-image onclick="$('#delete').click()"
-                = i.label "画像の削除", class: "delete-btn"
-            = i.file_field :image_file, accept: 'image/jpg,image/jpeg,image/png,image/gif', class: "image-form", id: :file
+            = i.label :image_file, "画像をアップロード", class: "input-btn",for: "post_file"
+            #post_image
+            = i.label "画像の削除", class: "delete-btn", id: :delete
+            = i.file_field :image_file, accept: 'image/jpg,image/jpeg,image/png,image/gif', class: "image-form", id: :post_file
             = f.text_area :message, class: "textarea", placeholder: "メッセージ"
             = f.submit "投稿する", class: "submit"
     .user-container
