--- a/app/views/settings/profiles/edit.html.slim
+++ b/app/views/settings/profiles/edit.html.slim
@@ -7,7 +7,7 @@
     .edit-form-container
       .edit-profile-label
         .edit-image-container
-          #profile_img_field.image-item
+          #profile_image.image-item
             = image_tag current_user.profile.image_file, size: '50x50', class: "image-item"
         p フルネーム
         p ユーザーネーム
