--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,8 +26,9 @@ html
                 i.fa.fa-compass aria-hidden="true" title="recommend"
               a.nav-item.nav-link href="#"
                 i.fa.fa-heart-o aria-hidden="true" title="notification"
-              a.nav-item.nav-link href="#"
-                i.fa.fa-user-o aria-hidden="true" title="mypage"
+              = link_to profile_path
+                .nav-item.nav-link
+                  i.fa.fa-user-o aria-hidden="true" title="mypage"
               = link_to logout_path, method: :post do
                 .nav-item.nav-link
                   i.fa.fa-sign-out aria-hidden="true" title="logout"
