[fix] user_controllerのshow修正、テストにDBカウントのチェック追加、user_idをusernameに

--- a/app/views/relationships/_follow.html.slim
+++ b/app/views/relationships/_follow.html.slim
@@ -1,9 +1,9 @@
-.follow-link id="follow-link-#{user.id}"
-  - if current_user.followed?(user.id)
-    = link_to unfollow_path(user_id: user.id), method: :delete, remote: true do
+.follow-link id="follow-link-#{user.user_name}"
+  - if current_user.followed?(user)
+    = link_to unfollow_path(username: user.user_name), method: :delete, remote: true do
       .follow_button
         button.unfollow-button フォロー中
   - else
-    = link_to follow_path(user_id: user.id), method: :post, remote: true do
+    = link_to follow_path(username: user.user_name), method: :post, remote: true do
       .follow_button
         button.follow-button フォローする
