--- a/app/views/relationships/unfollow.js.erb
+++ b/app/views/relationships/unfollow.js.erb
@@ -1,1 +1,1 @@
-$("#follow-link-<%= @user.id %>").html('<%= escape_javascript(render("relationships/follow",user: @user)) %>');
+$("#follow-link-<%= @user.user_name %>").html('<%= escape_javascript(render("relationships/follow",user: @user)) %>');
