--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,19 +15,12 @@ html
           a.navbar-brand href="/"
             = image_tag 'logo.png'
             || Instagram
-        .nav-center
-          form.form-group
-            span.fa.fa-search aria-hidden="true"
-            input.form-control.search-form.font-awesome aria-label="Search" placeholder="検索" type="search" /
         .nav-right
           .navbar-nav
             - if current_user
-              a.nav-item.nav-link.active href="#"
-                i.fa.fa-compass aria-hidden="true" title="recommend"
-              a.nav-item.nav-link href="#"
-                i.fa.fa-heart-o aria-hidden="true" title="notification"
-              a.nav-item.nav-link href="#"
-                i.fa.fa-user-o aria-hidden="true" title="mypage"
+              = link_to user_path(username: current_user.user_name)
+                .nav-item.nav-link
+                  i.fa.fa-user-o aria-hidden="true" title="mypage"
               = link_to logout_path, method: :post do
                 .nav-item.nav-link
                   i.fa.fa-sign-out aria-hidden="true" title="logout"
