--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -29,35 +29,9 @@ header {
 
   .nav-right {
     margin-left: auto;
-  }
-
-  .nav-center {
-    margin-left: 220px;
-    height: 26px;
-  }
-
-  .search-form {
-    height: 24px;
-    font-size: 14px;
-    background-color: whitesmoke;
-    padding-left: 1.4rem;
-  }
-
-  input::placeholder {
-    text-align: center;
-  }
-
-  .fa-search {
-    position: absolute;
-    z-index: 2;
-    display: block;
-    width: 1.4rem;
-    height: 1.4rem;
-    font-size: 16px;
-    line-height: 1.4rem;
-    text-align: center;
-    pointer-events: none;
-    color: #aaa;
+    .navbar-nav{
+      flex-direction: row;
+    }
   }
 }
 
