[fix] imageアップロード部分のCSS追加

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -95,6 +95,10 @@ header {
         text-align: center;
       }
 
+      #post_image{
+        text-align: center;
+      }
+
       .delete-btn {
         background: grey;
         color: #fff;
